# cars_drive_faster

./: CMakeLists.txt  Makefile  README.md  cars_drive_faster.cc
doc/: class_diagram
src/: CMakeLists.txt  EngAnim_T.cpp  EngAnim_T.h  EngColis_T.cpp  EngColis_T.h  EngMove_T.cpp  EngMove_T.h  PasteImgFunctions.cpp  PasteImgFunctions.h  Rect_T.cpp  Rect_T.h  TBoardSector.cpp  TBoardSector.h  TOption.cpp  TOption.h  T_Board.cpp  T_Board.h  T_CLI.cpp  T_CLI.h  T_Car.cpp  T_Car.h  T_Car1.cpp  T_Car1.h  T_Car2.cpp  T_Car2.h  T_CollisionChecker.cpp  T_CollisionChecker.h  T_GameDefs.cpp  T_GameDefs.h  T_GameImages.cpp  T_GameImages.h  T_GameMutexes.cpp  T_GameMutexes.h  T_Obstacle.cpp  T_Obstacle.h  T_Rect.cpp  T_Rect.h  T_Road.cpp  T_Road.h  T_RoadHole.cpp  (+45 more)
src/assets/: bush.h  car1.h  car2.h  hole.h  lane.h  line_dotted.h  roadside.h
src/assets/png/: bush.xcf  car2z.xcf  hole3.xcf
src/debug/: CMakeLists.txt  game_board_obj_T_2_move_en_T.cpp
src/old/: calc_v_shift.h  game_visible_obj_1.h  paste_img.cpp  paste_img.h  process_move.c
src/test/: CMakeLists.txt  PasteImgFunctions_test.cpp  TBoardSector_test.cpp  TOption_test.cpp  T_Board_test.cpp  T_CLI_test.cpp  T_Car1_test.cpp  T_Car2_test.cpp  T_Car_test.cpp  T_CollisionChecker_test.cpp  T_GameDefs_test.cpp  T_GameImages_test.cpp  T_GameMutexes_test.cpp  T_Obstacle_test.cpp  T_Rect_test.cpp  T_RoadHole_test.cpp  T_RoadLine_test.cpp  T_Road_test.cpp  T_SteppeBush_test.cpp  T_TimeController_test.cpp  T_VShiftUnit_test.cpp  test_EngAnim_T.cpp  test_EngAnim_T.h  test_EngColis_T.cpp  test_EngColis_T.h  test_EngMove_T.cpp  test_EngMove_T.h  test_Rect_T.cpp  test_Rect_T.h  test_game_Vmovable_obj_T.cpp  test_game_Vmovable_obj_T.h  test_game_obj_T.cpp  test_game_obj_T.h
src/tests/: CMakeLists.txt  test_check_collisions_en_T.cpp  test_game_board_obj_T.cpp  test_move_en_T.cpp
